adding further purchase logic and nesting purchase and item creation
